# mercury

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  format.yml  security.yml
docs/: architecture.md
docs/decisions/: 0001-initial-repository-scaffold.md  0002-phase-1-enzyme-f64-core.md  0003-differentiable-primitives-identity.md
docs/implementation-plans/: 2026-07-10-differentiable-function-contract.md  phase-1-gradient-validation.md  phase-2-core-types-and-linalg.md
docs/superpowers/plans/: 2026-07-03-phase-3-decompositions.md
docs/superpowers/specs/: 2026-07-03-phase-3-decompositions-design.md
examples/: solve_gradient.rs
nix/: checks.nix  dev-shells.nix  formatter-module.nix  formatter.nix  overlays.nix  packages.nix  rust-toolchain.nix
scripts/: _common.sh  audit.sh  bench.sh  build.sh  bump-version.sh  check-version-bump.sh  ci.sh  clean.sh  coverage.sh  dev.sh  docs.sh  format.sh  memcheck.sh  profile.sh  release-check.sh  test.sh
src/: lib.rs  objective.rs  validation.rs
src/core/: matrix.rs  mod.rs  perm.rs  smatrix.rs  svector.rs  vector.rs
src/geometry/: mod.rs  quaternion.rs
src/linalg/: adjoint.rs  cholesky.rs  error.rs  factorization.rs  fixed.rs  lu.rs  mod.rs  qr.rs  reductions.rs  triangular.rs
tests/: core_dynamic.rs  core_perm.rs  core_smatrix.rs  core_svector.rs  geometry_quaternion.rs  linalg_adjoint.rs  linalg_cholesky.rs  linalg_fixed.rs  linalg_lstsq_adjoint.rs  linalg_lu.rs  linalg_qr.rs  linalg_reductions.rs  linalg_spd_fixed.rs  objective.rs  public_api.rs  validation.rs
