[package]
name = "mercury"
version = "0.1.0"
edition = "2024"
description = "Differentiable math substrate for pantheon-rs."
license = "MIT"
repository = "https://github.com/pantheon-rs/mercury"
readme = "README.md"
keywords = ["autodiff", "simulation", "math", "aerospace"]
categories = ["mathematics", "science", "simulation"]
publish = false

[dependencies]

[dev-dependencies]

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
