[package]
name = "mercury"
version = "0.2.0"
edition = "2024"
description = "Differentiable math substrate for pantheon-rs."
license = "MIT"
repository = "https://github.com/pantheon-rs/mercury"
readme = "README.md"
keywords = ["autodiff", "simulation", "math", "aerospace"]
categories = ["mathematics", "science", "simulation"]
publish = false

[dependencies]

[dev-dependencies]

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# cargo-llvm-cov sets --cfg=coverage; the Enzyme test legs are gated behind
# cfg(not(coverage)) because Enzyme cannot differentiate the atomic profile
# counters that coverage instrumentation injects.
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage)",
  "cfg(coverage_nightly)",
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Deliberate numeric style: mul_add changes rounding vs the two-op form,
# lowers to a libm call without target FMA, and its Enzyme interaction is
# unverified. Kernels must match finite-difference oracles with predictable
# IR — explicit mul/add everywhere.
suboptimal_flops = "allow"
